--- a/index2.html
+++ b/index2.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Experiment</title>
+    <title>test </title>
 </head>
 <body>
-    <p>Here we add anotherchange ok?</p>
+    <p>This is page 2</p>
 </body>
 </html>
