Index pages changes

--- a/index2.html
+++ b/index2.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test </title>
+    <title>test...ing 123 </title>
 </head>
 <body>
     <p>This is page 2</p>
+    <p>add some more changes from the other folder here.</p>
 </body>
 </html>
