--- a/index2.html
+++ b/index2.html
@@ -9,5 +9,6 @@
 <body>
     <p>This is page 2</p>
     <p>add some more changes from the other folder here.</p>
+    <h1>final changes for now yay</h1>
 </body>
 </html>
