--- a/index2.html
+++ b/index2.html
@@ -7,8 +7,6 @@
     <title>test...ing 123 </title>
 </head>
 <body>
-    <p>This is page 2</p>
-    <p>add some more changes from the other folder here.</p>
-    <h1>final changes for now yay</h1>
+    <p>rebase test 2</p>
 </body>
 </html>
